# opencl

./: CMakeLists.txt  Dockerfile  README.md
cl/: kernel.cl
src/: clBuffer.cpp  clBuffer.h  clBuffer.hpp  clDevice.cpp  clDevice.h  clDevice.hpp  clKernel.cpp  clKernel.h  clKernel.hpp  main.cpp  strFile.cpp  strFile.h  strFile.hpp
visualStudio/openCLIntro/: openCLIntro.sln
visualStudio/openCLIntro/openCLIntro/: openCLIntro.vcxproj  openCLIntro.vcxproj.filters
xcode/openCLIntro/openCLIntro.xcodeproj/: project.pbxproj
xcode/openCLIntro/openCLIntro.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/openCLIntro/openCLIntro.xcodeproj/project.xcworkspace/xcuserdata/newsonn.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/openCLIntro/openCLIntro.xcodeproj/xcuserdata/newsonn.xcuserdatad/xcschemes/: openCLIntro.xcscheme  xcschememanagement.plist
